// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";
import "google/api/annotations.proto";

package com.example;

message SetValueCommand {
    string entity_id = 1 [(.cloudstate.entity_key) = true];
    int32 value = 2;
}

message GetValueCommand {
    string entity_id = 1 [(.cloudstate.entity_key) = true];
}

message MyState {
    int32 value = 1;
}

service MyServiceEntity {
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/simple/{device_id}/setValue",
            body: "*",
        };

    };
    rpc GetValue(GetValueCommand) returns (MyState) {
        option (google.api.http) = {
            get: "/simple/{device_id}",
            body: "*",
        };

    };
}
